--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -2,7 +2,7 @@
 <html lang="de" class="dark">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="%sveltekit.assets%/favicon.svg" />
+    <link rel="icon" type="image/png" href="%sveltekit.assets%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Homelab Dashboard</title>
     %sveltekit.head%
